# dune-testtools

./: .gitignore  .gitlab-ci.yml  .nanorc  BSD  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE.md  Makefile.am  README  README.md  config.h.cmake  configure.ac  dune.module  git-pre-push  test-setup.sh
cmake/modules/: AddFolderLinkOrCopy.cmake  CMakeLists.txt  ConditionalIncludes.cmake  DuneCMakeAssertion.cmake  DuneSystemtests.cmake  DuneTesttoolsMacros.cmake  ExpandMetaIni.cmake  Makefile.am  MetaIniMacros.cmake  ParsePythonData.cmake  RunConvergenceTest.cmake
doc/: CMakeLists.txt  Makefile.am  technical.tex
doc/sphinx/: CMakeLists.txt  Makefile  cmake.rst  conf.py.in  dune-testtools.rst  index.rst  manual.rst  metaini.rst  python.rst  quickstartdune.rst  sphinx_metainicommand.py  testingtesttools.rst  what.rst
doc/sphinx/_templates/autosummary/: module.rst
doc/sphinx/source/: conf.py  dune-testtools.rst  index.rst
dune/: Makefile.am
dune/testtools/: CMakeLists.txt  Makefile.am  gridconstruction.hh  outputtree.hh  testtools.hh
dune/testtools/test/: CMakeLists.txt  constructiontest.cc  outputtreetest.cc  test_convergencetest.cc  test_convergencetest.ini  triggertest.cc
dune/testtools/test/allvariants/: CMakeLists.txt  test.mini
dune/testtools/test/cmakediscard/: CMakeLists.txt
dune/testtools/test/cmakepython/: CMakeLists.txt  testdata.py
dune/testtools/test/constructiontest/: CMakeLists.txt  constructiontest.cc  tree1.ini
dune/testtools/test/constructiontest/ini/: ug_structured_simplical.ini  yasp.ini
dune/testtools/test/convergencetest/: CMakeLists.txt  test_convergencetest.cc  test_convergencetest.ini  test_system_convergencetest.cc  test_system_convergencetest.ini
dune/testtools/test/dynamicvariants/: CMakeLists.txt  dynamictest.mini
dune/testtools/test/onemacrodynamicvariants/: CMakeLists.txt
dune/testtools/test/outputcompare/: CMakeLists.txt  test.out
dune/testtools/test/parallel/: CMakeLists.txt  source.cc  test.mini
dune/testtools/test/staticvariants/: CMakeLists.txt  statictest.mini
dune/testtools/test/vtkcompare/: CMakeLists.txt  source_parallel.cc  test_parallel.mini
dune/testtools/tutorial/: CMakeLists.txt  source.cc
m4/: CMakeLists.txt  Makefile.am  dune-testtools.m4
python/: .gitignore  CMakeLists.txt  MANIFEST.in  README  bla.txt  cmakeoutput.py  command.py  command_infrastructure.py  compile_definitions.py  conditionals.py  convergencetest_metaini.py  dotdict.py  escapes.py  exec_metaini.py  fuzzy_compare_vtk.py  fuzzycomparevtu.py  import_ini.py  metaIni.py  metaini.py  parseIni.py  parseini.py  parser.py  pytest.ini  setup.py  setup.py.in  static_metaini.py  test.py  uniquenames.py  writeIni.py
python/dune/testtools/: CMakeLists.txt  cmakeoutput.py  command.py  command_infrastructure.py  conditionals.py  escapes.py  metaini.py  parser.py  static_metaini.py  testdiscarding.py  uniquenames.py  writeini.py
python/dune/testtools/parametertree/: CMakeLists.txt  dotdict.py  parser.py
python/dune/testtools/wrapper/: CMakeLists.txt  argumentparser.py  call_executable.py  compareini.py  convergencetest.py  fuzzy_compare_vtk.py
python/dune_testtools/: cmakeoutput.py  command.py  command_infrastructure.py  conditionals.py  convergencetest_metaini.py  dotdict.py  escapes.py  fuzzy_compare_vtk.py  metaini.py  parser.py  static_metaini.py  uniquenames.py  writeini.py
python/dune_testtools/tests/: conftest.py  test_metaIni.py  vtu31.vtu
python/dune_testtools/wrapper/: argumentparser.py  call_executable.py  call_parallel.py  convergencetest.py  fuzzy_compare_vtk.py  vtkcompare.py
python/scripts/: CMakeLists.txt  analysis.py  dune_expand_metaini.py  dune_extract_static.py  dune_has_static_section.py  dune_metaini_analysis.py  expand_metaini.py  extract_static.py  has_static_section.py
python/tests/: .gitignore  command.ini  cond3.mini  convtest.ini  convtest2.ini  convtest3.ini  convtest4.ini  import.ini  metaini1.mini  metaini2.mini  parse2.ini  parse3.ini  static1.mini  test_command.py  test_conditionals.py  test_convergencetest_metaini.py  test_discarding.py  test_dotdict.py  test_escapes.py  test_fuzzycomparevtk.py  test_import_ini.py  test_inicompare.py  test_metaIni.py  test_parseIni.py  test_static_metaini.py  test_uniquenames.py  vtu1.vtu  vtu2.vtu  vtu21.vtu  vtu3.vtu  vtu31.vtu
python/wrapper/: CMakeLists.txt  argumentparser.py  call_executable.py  convergencetest.py  dune_convergencetest.py  dune_execute.py  dune_execute_parallel.py  dune_outputtreecompare.py  dune_vtkcompare.py  dune_vtkcompare_parallel.py  execute.py  execute_parallel.py  outputtreecompare.py  test_convergence.py  vtkcompare.py
src/: CMakeLists.txt  Makefile.am  dune_testtools.cc
test-module/: CMakeLists.txt  config.h.cmake  dune.module  test-module.pc.in
test-module/test/: outputtreetest.cc  triggertest.cc
