add_executable(constructiontest constructiontest.cc)
dune_symlink_to_source_files(FILES ini test.msh)
add_dune_ug_flags(constructiontest)
if (dune-alugrid_FOUND)
  add_dune_dune_alugrid_flags(constructiontest)
endif(dune-alugrid_FOUND)
target_link_libraries(constructiontest ${DUNE_LIBS})
add_test(constructiontest constructiontest)
