if(${DEBUG_MACRO_TESTS})
  add_dune_convergence_test(SOURCE test_convergencetest.cc INIFILE test_convergencetest.ini BASENAME convergence_test OUTPUT_TARGETS targetlist DEBUG)
  message("Targets generated for convergence test testsuite: ${targetlist}")
else()
  add_dune_convergence_test(SOURCE test_convergencetest.cc INIFILE test_convergencetest.ini BASENAME convergence_test OUTPUT_TARGETS targetlist)
endif()

foreach(_exe ${targetlist})
  target_link_libraries(${_exe} ${DUNE_LIBS})
endforeach()
